--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,7 @@ input {
 input[type="text"],
 input[type="email"],
 input[type="password"],
-input[type="date"],
+input[type="datetime-local"],
 input[type="submit"],
 select,
 textarea {
